flapivor/tests/m1/hopix/parser/good/105-assignment-2.hopix
val main =
  (ref 0) := 1