flapivor/tests/m1/hopix/parser/bad/68-local-definition.hopix
val main =
  val x = 0
  x